--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,13 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 200px;
   padding: 20px;
-  color: white;
+  width: 100%;
+}
+
+.App-header h1 {
+  color: white
 }
 
 .App-title {
